# vhegen

./: MANIFEST.in  README.md  setup.cfg
examples/: benzene.py  c5h.py  config.cfg
examples/outputs/: C5h-cart.inp  C5h-cart.op  C5h-pol.inp  C5h-pol.op  C5h.out  C5h.tex  C5h.toc  benzene-cart.inp  benzene-cart.op  benzene-pol.inp  benzene-pol.op  benzene.out  benzene.tex  benzene.toc
scripts/: vhegen
src/vhegen/: __init__.py
src/vhegen/modules/: electronic.py  glbls.py  input.py  output.py  vibrational.py
src/vhegen/tables/: eigenvalues.py  formulas.py  matrices.py
