[metadata]
name = vhegen
version = 2.0.2
author = James Brown
author_email = jbrown88@yorku.ca
description = A package that generates Hamiltonians for arbitrarly large (pseudo)Jahn-Teller systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/T-Zeng-Group-TheoChem-YorkU/vhegen 
project_urls = 
	Bug Tracker = https://github.com/T-Zeng-Group-TheoChem-YorkU/vhegen/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src 
include_package_data = True
packages = find:
python_requires = >=3.6
scripts=./scripts/vhegen
install_requires=
       numpy
       sympy
[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

[options.package_data]
* =
    examples/benzene.py
    examples/config.cfg
